# recipe-example-app

./: .gitignore  CLAUDE.md  LICENCE  README.md  SUUNNITELMA.md  TEST_PLAN.md  fuzz_run.sh  generate_test_data.sh  pyproject.toml  pytest.ini  run.sh  run_test.sh  test_run.sh
fuzz/: atheris_recipe_forms_fuzz.py  radamsa_recipe_forms_fuzz.sh  radamsa_recipe_forms_harness.py
fuzz/crashes/: recipe_create_long_fields.txt_iter_1_1760610001.post  recipe_create_long_fields.txt_iter_1_1760610043.post
fuzz/seeds/: recipe_create_long_fields.txt  recipe_create_minimal.txt  recipe_create_negative_times.txt  recipe_create_unicode.txt  recipe_create_valid.txt
recipe_project/: settings.py  urls.py
recipes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipes/management/commands/: generate_test_data.py
recipes/migrations/: 0001_initial.py
recipes/static/css/: styles.css
recipes/static/js/: formset.js
recipes/templates/: base.html  recipe_detail.html  recipe_form.html  recipe_list.html
recipes/templates/includes/: ingredient_options.html  recipe_card.html  recipe_card_list.html
recipes/tests/: test_forms.py  test_integration.py  test_models.py  test_urls.py  test_views.py
tests_e2e/: test_recipe_create_and_search_e2e.py  test_recipe_list_e2e.py
