[project]
name = "recipe-app"
version = "0.1.0"
description = "Simple recipe management application with Django and HTMX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0,<5.1",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-playwright>=0.5.0",
    "playwright>=1.46.0",
]
